@@ -1,5 +1,5 @@
-# pylint: disable=W1201, C0301
 """events module"""
+
 import logging
 from datetime import datetime
 import transaction
@@ -11,20 +11,17 @@ logger = logging.getLogger("eea.api.controlpanel")
 
 
 def detectVersionChange(settings, event):
-    """ Frontend vers event subscriber that updates old_version & date record
-    """
-    if event.record.fieldName == 'version':
-        set_registry_record(
-            'date', datetime.now(), interface=IEEAVersionsFrontend)
+    """Frontend vers event subscriber that updates old_version & date record"""
+    if event.record.fieldName == "version":
+        set_registry_record("date", datetime.now(), interface=IEEAVersionsFrontend)
         if event.oldValue:
             set_registry_record(
-                'old_version', event.oldValue, interface=IEEAVersionsFrontend)
+                "old_version", event.oldValue, interface=IEEAVersionsFrontend
+            )
 
-        transaction.get().note(
-            "eea.api.controlpanel: updating FRONTEND_VERSION")
+        transaction.get().note("eea.api.controlpanel: updating FRONTEND_VERSION")
         transaction.commit()
 
         logger.info(
-            "Frontend version changed from %s to %s",
-            event.oldValue, event.newValue
+            "Frontend version changed from %s to %s", event.oldValue, event.newValue
         )
