@@ -1,5 +1,5 @@
-""" Base test cases
-"""
+"""Base test cases"""
+
 from Products.CMFPlone import setuphandlers
 from plone.testing import z2
 from plone.app.testing import TEST_USER_ID
@@ -11,29 +11,27 @@ import eea.api.controlpanel
 
 
 class EEAFixture(PloneSandboxLayer):
-    """ EEA Testing Policy
-    """
+    """EEA Testing Policy"""
+
     def setUpZope(self, app, configurationContext):
-        """ Setup Zope
-        """
+        """Setup Zope"""
         self.loadZCML(package=eea.api.controlpanel)
-        z2.installProduct(app, 'eea.api.controlpanel')
+        z2.installProduct(app, "eea.api.controlpanel")
 
     def setUpPloneSite(self, portal):
-        """ Setup Plone
-        """
-        applyProfile(portal, 'eea.api.controlpanel:default')
+        """Setup Plone"""
+        applyProfile(portal, "eea.api.controlpanel:default")
 
         # Default workflow
-        wftool = portal['portal_workflow']
-        wftool.setDefaultChain('simple_publication_workflow')
+        wftool = portal["portal_workflow"]
+        wftool.setDefaultChain("simple_publication_workflow")
 
         # Login as manager
-        setRoles(portal, TEST_USER_ID, ['Manager'])
+        setRoles(portal, TEST_USER_ID, ["Manager"])
 
         # Add default Plone content
         try:
-            applyProfile(portal, 'plone.app.contenttypes:plone-content')
+            applyProfile(portal, "plone.app.contenttypes:plone-content")
         except KeyError:
             # BBB Plone 4
             setuphandlers.setupPortalContent(portal)
@@ -41,12 +39,12 @@ class EEAFixture(PloneSandboxLayer):
         # Create testing environment
         portal.invokeFactory("Folder", "sandbox", title="Sandbox")
 
-
     def tearDownZope(self, app):
-        """ Uninstall Zope
-        """
-        z2.uninstallProduct(app, 'eea.api.controlpanel')
+        """Uninstall Zope"""
+        z2.uninstallProduct(app, "eea.api.controlpanel")
+
 
 EEAFIXTURE = EEAFixture()
-FUNCTIONAL_TESTING = FunctionalTesting(bases=(EEAFIXTURE,),
-                                       name='EEAcontrolpanel:Functional')
+FUNCTIONAL_TESTING = FunctionalTesting(
+    bases=(EEAFIXTURE,), name="EEAcontrolpanel:Functional"
+)
